Fix overlapping name when navbar collapse

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ h3 {
   width: 100%;
   max-width: 100%;
   top: 50%;
+  transform: translateY(+50%);
   text-align: center;
 }
 
